--- a/package.json
+++ b/package.json
@@ -2,19 +2,16 @@
   "name": "dxstarter",
   "version": "1.0.0",
   "description": "Quick settings for developing themes.",
-  "main": "Gruntfile.js",
+  "main": "Gulpfile.js",
   "dependencies": {
     "grunt": "^0.4.5",
     "grunt-sass": "^1.1.0"
   },
   "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-autoprefixer": "^3.0.3",
-    "grunt-contrib-cssmin": "^0.14.0",
-    "grunt-contrib-jshint": "^0.11.2",
-    "grunt-contrib-uglify": "^1.0.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-sass": "^1.1.0"
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-notify": "^2.2.0",
+    "gulp-sass": "^2.3.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
