--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "grunt-sass": "^1.1.0"
   },
   "devDependencies": {
+    "casperjs": "^1.1.3",
     "del": "^2.2.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
@@ -16,13 +17,16 @@
     "gulp-imagemin": "^3.0.1",
     "gulp-livereload": "^3.8.1",
     "gulp-notify": "^2.2.0",
+    "gulp-phantomcss": "^0.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.1",
     "gulp-uglify": "^1.5.3",
-    "moment": "^2.13.0"
+    "moment": "^2.13.0",
+    "phantomcss": "^1.1.4",
+    "phantomjs-prebuilt": "^2.1.13"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "casperjs test tests/views/tests.js"
   },
   "author": "DevriX",
   "license": "ISC",
