Add local executable command for gulp

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "moment": "^2.13.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "gulp": "./node_modules/.bin/gulp"
   },
   "author": "DevriX",
   "license": "ISC",
