--- a/package.json
+++ b/package.json
@@ -3,10 +3,7 @@
   "version": "1.2.1",
   "description": "Quick settings for developing themes.",
   "main": "Gulpfile.js",
-  "dependencies": {
-    "grunt": "^1.0.1",
-    "grunt-sass": "^2.0.0"
-  },
+  "sasslintConfig": ".sass-lint.yml",
   "devDependencies": {
     "del": "^2.2.0",
     "gulp": "^3.9.1",
@@ -18,8 +15,10 @@
     "gulp-notify": "^2.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.0.0",
+    "gulp-sass-lint": "^1.3.2",
     "gulp-uglify": "^2.0.0",
-    "moment": "^2.13.0"
+    "moment": "^2.13.0",
+    "sass-lint": "^1.10.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
