--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "gulp": "./node_modules/.bin/gulp",
     "ziptheme": "bash zip.sh",
-    "ver": "node index.js"
+    "ver": "node assets-version.js"
   },
   "author": "DevriX",
   "license": "ISC",
