--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-cssmin": "^0.1.7",
     "gulp-imagemin": "^3.0.1",
     "gulp-livereload": "^3.8.1",
+    "gulp-newer": "^1.4.0",
     "gulp-notify": "^2.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.0.0",
