--- a/package.json
+++ b/package.json
@@ -25,14 +25,15 @@
     "gulp-sourcemaps": "^2.6.4",
     "gulp-uglify": "^2.0.0",
     "moment": "^2.13.0",
+    "replace": "^0.3.0",
     "replace-in-file": "^3.1.1",
     "sass-lint": "^1.10.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "gulp": "./node_modules/.bin/gulp",
-    "ziptheme": "bash zip.sh",
-    "ver": "node assets-version.js"
+    "ziptheme": "bash utility-scripts/zip.sh",
+    "ver": "node utility-scripts/assets-version.js"
   },
   "author": "DevriX",
   "license": "ISC",
