--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "main": "Gulpfile.js",
   "sasslintConfig": ".sass-lint.yml",
   "devDependencies": {
+    "assemble-core": "^0.31.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
+    "base-argv": "^0.5.0",
+    "base-questions": "^0.9.1",
     "del": "^2.2.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
@@ -26,7 +29,7 @@
     "gulp-uglify": "^2.0.0",
     "moment": "^2.13.0",
     "replace": "^0.3.0",
-    "replace-in-file": "^3.1.1",
+    "replace-in-file": "^3.4.0",
     "sass-lint": "^1.10.2"
   },
   "scripts": {
