--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "sass-lint": "^1.10.2"
   },
   "scripts": {
+    "init": "node utility-scripts/configure.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "gulp": "./node_modules/.bin/gulp",
     "ziptheme": "bash utility-scripts/zip.sh",
