--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gulp-livereload": "^3.8.1",
     "gulp-newer": "^1.4.0",
     "gulp-notify": "^3.2.0",
+    "gulp-plumber": "^1.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^4.0.1",
     "gulp-sass-lint": "^1.3.2",
