--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "dxstarter",
-  "version": "1.4.1",
+  "version": "1.5.0",
   "description": "Quick settings for developing themes.",
   "main": "Gulpfile.js",
+  "repository": "https://github.com/DevriX/DX-Starter",
   "sasslintConfig": ".sass-lint.yml",
   "devDependencies": {
     "@babel/cli": "^7.2.3",
