--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp-babel": "^8.0.0",
     "gulp-clean-css": "^4.2.0",
     "gulp-concat": "^2.6.1",
+    "gulp-filter": "^5.1.0",
     "gulp-imagemin": "^5.0.3",
     "gulp-livereload": "^4.0.1",
     "gulp-newer": "^1.4.0",
@@ -27,10 +28,10 @@
     "gulp-sass-lint": "^1.4.0",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-uglify": "^3.0.2",
+    "gulp-util": "^3.0.8",
     "moment": "^2.24.0",
     "replace-in-file": "^4.1.0",
-    "sass-lint": "^1.13.1",
-    "gulp-filter": "^5.1.0"
+    "sass-lint": "^1.13.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -44,5 +45,9 @@
     "presets": [
       "@babel/preset-env"
     ]
+  },
+  "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.12.1",
+    "core-util-is": "^1.0.2"
   }
 }
