--- a/package.json
+++ b/package.json
@@ -47,7 +47,6 @@
     ]
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.12.1",
-    "core-util-is": "^1.0.2"
+    "@fortawesome/fontawesome-free": "^5.12.1"
   }
 }
